--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -1359,6 +1359,12 @@ Let's use web-mode, which supports font locking for templating.
 #+END_SRC
 
 #+RESULTS:
+** API exploration
+
+#+BEGIN_SRC emacs-lisp
+  (use-package restclient
+    :ensure t)
+#+END_SRC
 
 * Org Mode
 I use Org Mode to take notes for work and personal.
