--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -1980,4 +1980,11 @@ This is long so that fetching feeds does not timeout.
 #+END_SRC
 
 #+RESULTS:
+* External services (prodigy)
 
+#+BEGIN_SRC emacs-lisp
+  (use-package prodigy
+    :ensure t)
+#+END_SRC
+
+Services are defined in [[*Load host specific configuration][host specific configuration files]].
