Add copy file link function

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -936,6 +936,34 @@ Reduce the amount that the mouse scrolls.
     (add-hook 'prog-mode-hook 'outline-minor-mode))
 
 #+END_SRC
+** Copy file link
+
+#+BEGIN_SRC emacs-lisp
+(defun xah-copy-file-path (&optional *dir-path-only-p)
+  "Copy the current buffer's file path or dired path to `kill-ring'.
+Result is full path.
+If `universal-argument' is called first, copy only the dir path.
+URL `http://ergoemacs.org/emacs/emacs_copy_file_path.html'
+Version 2017-01-27"
+  (interactive "P")
+  (let ((-fpath
+         (if (equal major-mode 'dired-mode)
+             (expand-file-name default-directory)
+           (if (buffer-file-name)
+               (buffer-file-name)
+             (user-error "Current buffer is not associated with a file.")))))
+    (kill-new
+     (if *dir-path-only-p
+         (progn
+           (message "Directory path copied: 「%s」" (file-name-directory -fpath))
+           (file-name-directory -fpath))
+       (progn
+         (message "File path copied: 「%s」" -fpath)
+         -fpath )))))
+#+END_SRC
+
+#+RESULTS:
+: xah-copy-file-path
 
 * Coding
 ** Testing
