--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -951,10 +951,10 @@ Version 2017-01-27"
     (kill-new
      (if *dir-path-only-p
          (progn
-           (message "Directory path copied: 「%s」" (file-name-directory -fpath))
+           (message "Directory path copied: %s" (file-name-directory -fpath))
            (file-name-directory -fpath))
        (progn
-         (message "File path copied: 「%s」" -fpath)
+         (message "File path copied: %s" -fpath)
          -fpath )))))
 #+END_SRC
 
