Turn off outline-mode by default
Its keybindings overlap with evil-mode and I'm too lazy to change it /
don't use it often

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -921,11 +921,7 @@ Reduce the amount that the mouse scrolls.
   (defvar outline-minor-mode-prefix "\M-#")
 
   (use-package outshine
-    :ensure t
-    :config
-    ;;(add-hook 'outline-minor-mode-hook 'outshine-hook-function)
-    ;;(add-hook 'prog-mode-hook 'outline-minor-mode)
-)
+    :ensure t)
 
 #+END_SRC
 
